<resources>

    <string name="arabic">لغة العربية</string>
    <string name="english">English</string>
    <string name="app_name">Al Rugaib Furniture</string>


    <string name="hint_phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="full_name">Full Name</string>
    <string name="hint_email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="saved_addresses">Saved Addresses</string>

    <string name="confirmation">Confirmation</string>
    <string name="information_incomplete">Following information are incomplete</string>
    <string name="sure_to_submit">"Are you sure you want submit order to: "</string>
    <string name="choose_address">Choose an address</string>
    <string name="fill">"Fill"</string>
    <string name="correct">"Correct"</string>
    <string name="do_following_actions">Please do following actions:\n</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="input_phone">Please input phone number</string>
    <string name="phone_to_short">Phone number is to short</string>
    <string name="phone_to_long">Phone number is to long</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="order_done">Thank You, come again!</string>
    <string name="first_address">First Address</string>
    <string name="second_address">Second Address</string>
    <string name="third_address">Third Address</string>
    <string name="error_msg">Something went wrong</string>
    <string name="invoice_above_restriction">Invoice Number length has to be above 3 chars</string>
    <string name="invoice_below_restriction">Invoice Number length has to be below 9 chars</string>
    <string name="wrong_invoice">Wrong Invoice Number!</string>

</resources>
