<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              android:orientation="horizontal">

    <LinearLayout android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_margin="8dp"
                  android:layout_weight="1"
                  android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_email_address"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_address"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_phone_number"
            android:textColor="@color/colorAccent"/>

        <EditText
            android:id="@+id/input_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:hint="@string/hint_phone_number"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:maxEms="10"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray"/>

        <LinearLayout android:layout_width="match_parent"
                      android:orientation="horizontal"
                      android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/delivery_address"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:textColor="@color/colorAccent"/>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/submit_button"

                android:theme="@style/FloatingTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:clickable="true"
                android:src="@drawable/ic_done_white_24dp" />
        </LinearLayout>



            <com.google.android.gms.maps.MapView
                android:id="@+id/map_choosen"
                android:layout_margin="8dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved_addresses"
            android:textColor="@color/colorAccent"/>

        <com.google.android.gms.maps.MapView
            android:id="@+id/map_first"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"

            android:layout_weight="1"/>
        <com.google.android.gms.maps.MapView
            android:id="@+id/map_second"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"/>
        <com.google.android.gms.maps.MapView
            android:id="@+id/map_third"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"/>
    </LinearLayout>


</LinearLayout>