<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/login_coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_marginBottom="32dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/flag_arabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/arabic"/>
            <TextView
                android:id="@+id/flag_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/english"/>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"/>

        <RelativeLayout
            android:layout_width="0dp"

            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_weight="1">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:theme="@style/FloatingTextStyle">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:digits="1234567890"
                    android:hint="@string/hint_phone_number"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:maxEms="10"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@android:color/darker_gray"/>

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

    </LinearLayout>


    <LinearLayout android:layout_width="match_parent"
                  android:gravity="center_horizontal"
                  android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"/>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>